# Finance_Tracker

./: .gitignore  BUILD.md  CMakeLists.txt  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SQLITE_INTEGRATION.md  USER_GUIDE.md  WEB_QUICKSTART.md
finance-tracker-web/: README.md  package.json
finance-tracker-web/src/: index.html
finance-tracker-web/src/css/: styles.css
finance-tracker-web/src/js/: app.js
src/: exceptions.h  main.cpp
src/models/: Account.cpp  Account.h  Budget.cpp  Budget.h  Transaction.cpp  Transaction.h  User.cpp  User.h
src/services/: DatabaseService.h  FraudDetectionService.cpp  FraudDetectionService.h  TransactionService.cpp  TransactionService.h
web/: README.md  app.js  index.html  style.css
